--- a/styles/base.scss
+++ b/styles/base.scss
@@ -1,13 +1,16 @@
+@import "_functions.scss";
+
 html {
     font-size: 14.8px;
     font-family: "Darker Grotesque", sans-serif;
-    background-color: var(--bg)
+    background-color: var(--bg);
+    @apply text-black;
 
   }
-  
+
   h1 {
-    font-size: 38px;
-    line-height: 50px;
+    font-size: calcDimension(72, false, true);
+    line-height:calcDimension(95, false, true);
     text-transform: uppercase;
     font-weight: bold;
     font-family: "azo-sans-web", sans-serif;
@@ -15,15 +18,16 @@ html {
   }
 
   @mixin text-h2 {
-    font-size: 23.75px;
-    line-height: 26px;
+    font-size: calcDimension(45, false, true);
+
+    line-height:calcDimension(49, false, true);
   }
   
   h2 {
     @include text-h2;
     font-family: "azo-sans-web", sans-serif;
     text-transform: uppercase;
-    font-weight: bold;
+   
   }
 
   .text-h2 {
@@ -31,8 +35,8 @@ html {
   }
 
   h3 {
-    font-size: 23.75px;
-    line-height: 32px;
+    font-size: max(18px, calcDimension(45, false, true));
+    line-height: max(25px, calcDimension(61, false, true));
   }
   p {
     font-size: 14.84px;
@@ -49,20 +53,25 @@ html {
       line-height: 24px;
     }
     h1 {
-      font-size: 30px;
-      line-height: 39px;
+      font-size: min(30px, calcDimension(27, true, true));
+      line-height: min(35px, calcDimension(39, true, true));
     }
     h2 {
-      font-size: 11.72px;
-      line-height: 15.56px;
+      font-size: min(14px, calcDimension(18.75, true, true));
+      line-height:  calcDimension(25, true, true);
+      text-transform: unset;
     }
     h3 {
-      font-size: 18.75px;
-      line-height: 25px;
+      font-size: calcDimension(17, true, true);
+      line-height: calcDimension(23, true, true);
     }
     p {
-      font-size: 18.8px;
-      line-height: 25px;
+      font-size: 17.14px;
+      line-height: 23px;
+    }
+    .text-p-sm {
+      font-size: 17.14px;
+      line-height: 23px;
     }
     .text-p2 {
       font-size: 9.56px;
