--- a/styles/base.scss
+++ b/styles/base.scss
@@ -8,7 +8,7 @@ html {
 
   }
 
-  h1 {
+  @mixin text-h1 {
     font-size: clamp(24px, calcDimension(72, false, true), 36px);
     line-height: clamp(28px, calcDimension(95, false, true), 38px);
     text-transform: uppercase;
@@ -16,6 +16,14 @@ html {
     font-family: "azo-sans-web", sans-serif;
     letter-spacing: 0.1em;
   }
+  h1 {
+    @include text-h1
+  }
+
+  .text-h1 {
+    @include text-h1
+  }
+  
 
   @mixin text-h2 {
     font-size: clamp(18px, calcDimension(45, false, true), 22px);
@@ -57,9 +65,15 @@ html {
       font-size: 18.75px;
       line-height: 24px;
     }
+    
     h1 {
       font-size: min(30px, calcDimension(27, true, true));
       line-height: min(35px, calcDimension(39, true, true));
+    }
+
+    .text-h1 {
+      font-size: min(30px, calcDimension(27, true, true));
+      line-height: min(32px, calcDimension(39, true, true));
     }
     h2 {
       font-size: min(11px, calcDimension(18.75, true, true));
